[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["simonashrestha <simonashrestha1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncpg = "^0.29.0"
databases = "^0.9.0"
sqlalchemy = "^2.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
